lxqt-globalkeys-1.0.1 / 2022-01-07
===================================
 * Don't require Xlib to behave synchronously.

lxqt-globalkeys-1.0.0 / 2021-11-04
===================================
 * Updated AUTHORS.
 * Bumped minimum required Qt version to 5.15.
 * Added shortcut filtering.
 * Code cleanup.

lxqt-globalkeys-0.17.0 / 2021-04-15
===================================
  * Completely moved to Qt5 signal/slot syntax.

lxqt-globalkeys-0.16.0 / 2020-11-01
===================================
  * Added shortcut to configure display.
  * Silenced unused function parameters warnings.
  * Do not grab keys of disabled client actions.
  * Do not requite daemon restart for enabling shortcuts.

lxqt-globalkeys-0.15.0 / 2020-04-22
===================================
  * Removed (duplicated) string casts definitions.
  * Removed obsolete `qBinaryFind`.
  * Added some translation context to `main_window.ui`.
  * Don't mix const and non-const iterators.

lxqt-globalkeys-0.14.3 / 2019-10-14
===================================

  * In write_basic_package_version_file use the right package version

lxqt-globalkeys-0.14.2 / 2019-10-09
===================================

  * Better handling of default shortcuts
  * gui: Prevent exactly the same shortcut from being repeated at startup
  * gui: Remember config window size on exiting
  * gui: Better column widths with single-line texts
  * daemon: Use XDG hierarchy if no config file given
  * daemon: move shortcuts config fom /etc/xdg/lxqt to /usr/share/lxqt
  * daemon: Fixed loading of settings
  * cmake: Enhances Qt minimum required versions handling
  * cmake: Matches lxqt-globalkeys/ui required versions
  * cmake: Updates self version handling
  * Port towards C++ headers
  * Port towards C++11 override
  * Port towards C++11 nullptr
  * Updated translations

lxqt-globalkeys-0.14.1 / 2019-02-24
===================================

  * Don't rename a widget or a class without a full refactoring
  * Updated translations