@@ -1,3 +1,7 @@
+lxqt-globalkeys-1.1.0 / 2022-04-15
+===================================
+ * Updated translations.
+
 lxqt-globalkeys-1.0.1 / 2022-01-07
 ===================================
  * Don't require Xlib to behave synchronously.
